- Improved: "Factor purchase to stock unit" was moved to quantity units category in master product
- Improved: When scanning a product barcode and the purchase or inventory page, the note will now
  also be prefilled from the barcode (was option before, but server v4 has that behavior now) (#644)
- Improved: It is now clearer which QR code is to be scanned when using Home Assistant (#627)
- Fixed: Amounts with conversions are consistent over all pages now (#612, #626)
- Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Flickering of bottom messages when bottom bar was scrolled down (#719),
  vertical position is now animated smoothly instead of jumping
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
- Fixed: On product creation with prefilled name there was a plus instead of space character
- Fixed: On product details sheet, description card was rendered with wrong height sometimes (#717)
- Fixed: Editing of recipe ingredient with broken quantity unit is possible now
- Fixed: Recipe ingredient price factor is not saved wrong anymore when creating ingredient (#615)
- Fixed: Product description popup animation doesn't have glitches anymore
- Fixed: App was sometimes offline when opened from background (#722)
- Fixed: With server version below 3.3.0, stock quantity unit could not be set in new product (#678)
- Fixed: Total product count on overview page in stock section also included products with
  option "Never show on stock overview" enabled (#644)
- Fixed: Wrong quantity units in confirmation dialog of quick mode (#732)

## 3.2.1

- Fixed: Random crash with no reason (#699)